迁移 hadoop 存储与启动链路到 Spring 装配